Fix mipmaps not being regenerated after transformation was finished or cancelled

The final update will update only the "final" region, not all the parts fo the canvas
that were touched during the transformation preview. So we need to update them
at the end of the action.

BUG:480973